ispCP ω 1.0.0 Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~~~

2008-03-08 Benedikt Heintel
	- ENGINE:
		* Fixed: Error in adding Domain (missing $httpd_gid)
	- LANGAUGES:
		* Updated: Hungarian
	- DISTS:
		* Fixed #1089: (freeBSD) delete doble copy of apache conf in freebsd
		* Fixed #1090: (freeBSD) modified install docu in fbsd
		* Fixed #1091: (freeBSD) fix conf fbsd in courier
		* Fixed #1092: (freeBSD) fix conf fbsd in proftpd

2008-03-07 Benedikt Heintel
	- DOCS:
		* Fixed #1082: Packages list debian lenny
	- ENGINE
		* Fixed #1086: Errors during installation
		* Fixed: 'null' problem in strict perl
	- LANGUAGES:
		* Updated: Russian (thanks to Grundik)
	- SETUP:
		* Updated: Update script; Update to RC3
		* Updated: Update script; Update to RC4
		* Fixed #1087: ispcp_rc4 setup vs courier
		* Fixed #1088: ispcp_rc4 setup vs courier again
		* Changed: make directory to /tmp/ispcp

2008-03-04 Benedikt Heintel
	- SETUP:
		* Fixed #824: IMAP SSL Traffic not counted
		* Fixed #1075: ispcp-update fails when upgrading from RC2
		* Updated: Update script; Update to RC3
	- DISTS:
		* Fixed #1074: (opensuse) config Dists opensuse - wrong makefile

2008-03-03 Benedikt Heintel
	- ENGINE:
		* Added: Engine support for BSD plattforms (different root group)

2008-03-02 Benedikt Heintel
	- SETUP:
		* Fixed #317: missing "named.caching-nameserver.conf" during the installation
	- ENGINE:
		* Fixed #824: IMAP SSL Traffic not counted

2008-03-01 Benedikt Heintel
	- DOCS:
		* Updated all Docs. Some are still with ToDo
	- ENGINE:
		* Fixed #1070: FreeBSD, ispcp-setup uses group which does not exist
	- LANGUAGES:
		* Updated all languages
	- SETUP:
		* Inproved: Update SQL with IGNORE statement
		* Maybe fixed #946; ispcp-setup mysql password error
	- TOOLS:
		* Update PHPmyAdmin to version 2.11.5
	- DISTS:
		* Updated all distributions
		* Dropped support of Suse Enterprise Linux Server (SELS) - Please use OpenSuse files

2008-02-28 Benedikt Heintel
	- CONFIGS: